--- a/style.css
+++ b/style.css
@@ -7,6 +7,25 @@ body {
     -moz-osx-font-smoothing: grayscale;
 }
 
+.p1 {
+    font-size: x-large;
+    margin-bottom: 30px;
+}
+
+.p2 {
+    font-size: x-large;
+    font-style: italic;
+}
+
+.p3 {
+    font-size: large;
+    color:rgba(0, 0, 0, .7);
+}
+
+.p4 {
+    font-size: x-large;
+}
+
 a,
 button {
     transition: all .3s ease-in-out;
