--- a/css/font-awesome.css
+++ b/css/font-awesome.css
@@ -117,6 +117,17 @@
     animation: fa-spin 1s infinite steps(8)
 }
 
+@-webkit-keyframes fa-spin {
+    0% {
+
+        transform: rotate(0deg)
+    }
+    100% {
+
+        transform: rotate(359deg)
+    }
+}
+
 @keyframes fa-spin {
     0% {
 
@@ -3008,6 +3019,7 @@
     padding: 0;
     margin: -1px;
     overflow: hidden;
+    clip: rect(0, 0, 0, 0);
     border: 0
 }
 
@@ -3018,4 +3030,5 @@
     height: auto;
     margin: 0;
     overflow: visible;
+    clip: auto
 }
