--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@ body {
     padding: 0;
     background: #FFF;
     overflow-x: hidden;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .p1 {
@@ -78,6 +80,9 @@ a {
     clear: both;
     background: 50% 50% no-repeat;
     padding: 0 50px;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
     position: relative;
 }
@@ -124,6 +129,9 @@ a {
 .bg-tr-edge,
 .bg-br-edge,
 .bg-repeat {
+    -webkit-background-size: auto!important;
+    -moz-background-size: auto!important;
+    -o-background-size: auto!important;
     background-size: auto!important;
 }
 
@@ -426,6 +434,7 @@ a {
         top: 50%;
         right: 20px;
         transform: translate(0, -50%);
+        -webkit-transform: translateY(-50%);
     }
     .nav > li .dropdown-menu a,
     .nav > li .dropdown-menu a:hover {
@@ -608,10 +617,12 @@ a[data-lightbox]:hover::before {
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
 }
 
 a[data-lightbox]:hover img {
     opacity: 0.6;
+    -webkit-animation-fill-mode: none;
     animation-fill-mode: none;
 }
 
@@ -909,7 +920,7 @@ h4 {
     }
 }
 
-@media only screen and (min-width: 1024px) and (max-width: 1366px) {
+@media only screen and (min-width: 1024px) and (max-width: 1366px) and (-webkit-min-device-pixel-ratio: 1.5) {
     .b-parallax {
         background-attachment: scroll;
     }
@@ -970,6 +981,8 @@ h4 {
     .site-navigation {
         position: inherit;
         transform: none;
+        -webkit-transform: none;
+        -ms-transform: none;
     }
     .nav > li {
         margin-top: 0;
@@ -1006,6 +1019,7 @@ h4 {
     .navbar-collapse {
         padding: 0;
         overflow-x: hidden;
+        -webkit-box-shadow: none;
         box-shadow: none;
     }
     .navbar-brand img {
